Adding gzip compression via nginx.
Should speed up transfers of uncompressed archives.

--- a/files/default/nginx_site.conf
+++ b/files/default/nginx_site.conf
@@ -3,6 +3,14 @@ server {
     client_max_body_size 4G;
     keepalive_timeout 5;
 
+    gzip on;
+    gzip_proxied any;
+    # MyTardis generates uncompressed archives, so compress them in transit
+    gzip_types application/x-javascript application/json text/css text/html application/zip application/x-tar;
+    gzip_min_length 1024;
+    gzip_vary on;
+
+
     location / {
         include uwsgi_params;
         uwsgi_pass 127.0.0.1:3031;
@@ -12,3 +20,4 @@ server {
         alias /opt/mytardis/current/static/;
     }
 }
+
