This version builds on Ubuntu Lucid. Hopefully still works on Redhat. Removed Python-Ldap.

--- a/files/default/buildout.cfg
+++ b/files/default/buildout.cfg
@@ -1,6 +1,30 @@
 [buildout]
 extends = buildout.cfg
-eggs += psycopg2
+#This syntax should work, but doesn't:
+#eggs += psycopg2
+#eggs -= python-ldap
+
+#Apparently a bugfix for this has been committed - when it becomes available, the stuff below
+# should be removed in favour of the above.
+#http://stackoverflow.com/questions/11446038/combining-and-modifiers-in-buildout-scripts
+
+eggs =
+    nose
+    coverage
+    django-nose
+    nosexcover
+    MyTARDIS
+    bpython
+    python-memcached
+    docutils
+    flexmock
+    compare
+    django-jasmine
+    html2text
+    pystache
+    rdflib
+    rdfextras
+    psycopg2
 
 [django]
 settings = settings
