--- a/files/default/nginx_site.conf
+++ b/files/default/nginx_site.conf
@@ -14,6 +14,13 @@ server {
     location / {
         include uwsgi_params;
         uwsgi_pass 127.0.0.1:3031;
+        # this is to solve centos 6 error:
+        # upstream prematurely closed
+        client_max_body_size 500m;
+        client_body_buffer_size 8192k;
+        proxy_connect_timeout 100;
+        proxy_send_timeout 100;
+        proxy_read_timeout 100;        
     }
 
     location /static/ {
