--- a/files/default/buildout.cfg
+++ b/files/default/buildout.cfg
@@ -1,27 +1,8 @@
 [buildout]
 extends = buildout.cfg
 #This syntax should work, but doesn't:
-#eggs += psycopg2
-#eggs -= python-ldap
-
-#Apparently a bugfix for this has been committed - when it becomes available, the stuff below
-# should be removed in favour of the above.
-#http://stackoverflow.com/questions/11446038/combining-and-modifiers-in-buildout-scripts
-
-eggs =
-    nose
-    coverage
-    django-nose
-    nosexcover
-    MyTARDIS
-    bpython
-    python-memcached
-    docutils
-    flexmock
-    compare
-    django-jasmine
-    html2text
-    psycopg2
+eggs += psycopg2
+eggs -= python-ldap
 
 [django]
 settings = settings
