removed pygraphviz from buildout-chef.cfg

--- a/files/default/buildout.cfg
+++ b/files/default/buildout.cfg
@@ -3,6 +3,7 @@ extends = buildout.cfg
 #This syntax should work, but doesn't:
 eggs += psycopg2
 eggs -= python-ldap
+    pygraphviz
 
 [django]
 settings = settings
